<resources>
    <string name="app_name">Best Tamil Ringtone</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="latest">Latest</string>
    <string name="popular">Popular</string>
    <string name="categories">Categories</string>
    <string name="favorites">Favorites</string>
    <string name="downloads">Downloads</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>