<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_latest"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/latest" />

    <item
        android:id="@+id/nav_popular"
        android:icon="@drawable/home"
        android:title="@string/popular" />

    <item
        android:id="@+id/nav_categories"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/categories" />
    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorites" />
    <item
        android:id="@+id/nav_downloads"
        android:icon="@drawable/ic_baseline_insert_drive_file_24"
        android:title="@string/downloads" />


</menu>